2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataCollection.cs: Track
	CompletionData API.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Add event and property for accessing errors.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs: Track API.

2008-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: New base class
	  containing common XML completion code from the
	  AspNetEditorExtension.
	* Makefile.am, MonoDevelop.XmlEditor.mdp: Updated.
	* MonoDevelop.Xml.StateEngine/Parser2.cs: Remove unused parser.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs,
	  MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	  implemented IComparable <ICompletionData>

2008-09-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.addin.xml: Set an id to the xml editor
	  extension.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs,
	  MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Track api changes.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Tests/MonoDevelop.XmlEditor.Tests.mdp, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs,
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs: Updated
	  generated code.

2008-08-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlChar.cs,